--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   nginx:
     build: ./requirements/nginx/
 
@@ -6,14 +7,47 @@ services:
 
     container_name: NGINX
 
+    volumes:                                         # a enlever
+      - ./requirements/nginx/:/usr/share/nginx/html/ # a enlever
+
     ports:
       - "443:443"
+      - "8080:80"
+# comment link le port 9000 a nginx ?
+
+# comment link le port 3306 a wp ?
+  mariadb:
+      build: ./requirements/mariadb/
+
+      container_name: MARIADB
+
+      image:lscr.io/linuxserver/mariadb:latest            # a changer
+
+      environment:
+        - MARIADB_ROOT_PASSWORD=ROOT_ACCESS_PASSWORD      # a voir dans les secrets
+        - MARIADB_PASSWORD=ACCESS_PASSWORD
+        - MARIADB_USER=USER                               # il faut deux utilisateur
+        - MARIADB_DATABASE=PATH_TO_DATABASE
+
+      volumes:
+        - ./requirements/mariadb/config:/config
+
+      expose: "3306"
 
 
-        # wordpress:
-        #   build:
-        #   expose: "9000"
-        #   volumes:
-        #     - tools/ # un truc comme ca
+  wordpress:
+      build: ./requirements/wordpress/
 
-        #mariadb:
+      image: wordpress:latest                              # a changer
+      expose: "9000"
+
+      container_name: WORDPRESS
+
+      depends_on:
+        - mariadb
+
+      volumes:
+        - ./requirements/wordpress/wp-template/:/var/www/html/     # site web volume
+        - ./requirements/wordpress/database/:var/lib/mariadb/       # database volume
+
+  network:
