--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,6 +2,9 @@ FROM debian:11
 
 RUN apt update && apt upgrade -y && apt install -y php7.4-zip php7.4-mbstring mariadb-client 
 
-RUN chmod +x script.sh
+
+COPY . .
+
+RUN chmod +x ./script.sh
 
 ENTRYPOINT ["script.sh"]
