working on init SQL

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,3 +3,4 @@ MARIADB_USER=frienduser
 MARIADB_ADMIN_USER=vgarcia_user
 MARIADB_ADMIN_PASSWD=notfriend123
 MARIADB_PASSWD=friend1234
+DATABASE_NAME=wordpress_database
