--- a/srcs/requirements/nginx/nginx.conf
+++ b/srcs/requirements/nginx/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen localhost:443;
     server_name vgarcia.42.fr;
 
-    location {
-        #pour les cgi futurs
-    }
+    # location {
+    #     #pour les cgi futurs
+    # }
 }
