--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   nginx:
     build: ./requirements/nginx/
 
-    image: nginx:1.24.0
+    image: nginx
 
     container_name: NGINX
 
@@ -18,11 +18,14 @@ services:
   mariadb:
       build: ./requirements/mariadb/
 
+      image: mariadb
+
       container_name: MARIADB
 
       networks:
         - inception
-      environment:
+
+      env_file:
         - .env
 
       volumes:
