--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,11 +1,11 @@
 FROM debian:11
 
-RUN apt update && apt upgrade -y && apt install -y mariadb-server
+RUN apt update && apt upgrade -y && apt install -y mariadb-server sudo
 
-COPY . .
+COPY init.sql /docker-entrypoint-initdb.d/
+COPY script.sh /docker-entrypoint-initdb.d/
+
+RUN chmod +x /docker-entrypoint-initdb.d/script.sh
+RUN chmod +x /docker-entrypoint-initdb.d/init.sql
 
 EXPOSE 3306
-
-RUN chmod +x script.sh
-
-ENTRYPOINT ["script.sh"]
