--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -12,9 +12,6 @@ services:
     ports:
       - "443:443"
 
-# comment link le port 9000 a nginx ?
-
-# comment link le port 3306 a wp ?
   mariadb:
       build: ./requirements/mariadb/
 
@@ -32,7 +29,7 @@ services:
         - "3306:3306"
 
       volumes:
-        - ./requirements/mariadb/config:/var/lib/mysql/
+        - mariadb_data:/var/lib/mysql
 
   # wordpress:
   #     build: ./requirements/wordpress/
@@ -51,3 +48,7 @@ services:
 networks:
   inception:
     driver: bridge
+
+volumes:
+  mariadb_data:
+    driver: local
