--- a/srcs/requirements/mariadb/config.cnf
+++ b/srcs/requirements/mariadb/config.cnf
@@ -1,4 +1,26 @@
 [mysqld]
 
+user                    = mysql
 port                    = 3306
 bind-address            = localhost
+database                = /var/lib/mysql
+pid-file                = /run/mysqld/mysqld.pid
+basedir                 = /usr
+datadir                 = /var/lib/mysql
+tmpdir                  = /tmp
+lc-messages-dir         = /usr/share/mysql
+lc-messages             = en_US
+skip-external-locking
+character-set-server  = utf8mb4
+collation-server      = utf8mb4_general_ci
+
+socket = /run/mysqld/mysqld.sock
+
+[mysql]
+socket = /run/mysqld/mysqld.sock
+
+[mysqladmin]
+socket = /run/mysqld/mysqld.sock
+
+[client]
+socket = /run/mysqld/mysqld.sock
