--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,58 +1,62 @@
-# # FROM debian:11
+# # Utiliser Debian comme image de base
+# FROM debian:bullseye-slim
 
-# # RUN apt update && apt upgrade -y && apt install -y php7.4-fpm php7.4-mbstring mariadb-client
+# # Définir les variables d'environnement
+# ENV DEBIAN_FRONTEND=noninteractive
+# ENV WORDPRESS_VERSION=6.4.2
+# ENV WORDPRESS_SHA1=6e3704d3a906330e1a71d9e4b8f2b1b6c1c0b8ac
 
-# # COPY . .
-
-# # RUN chmod +x ./script.sh
-
-# # ENTRYPOINT ["script.sh"]
-
-# # Utilise une image Debian slim comme base pour une taille réduite
-
-# FROM debian:stable-slim
-
-# RUN apt-get update && \
-#     apt-get install -y --no-install-recommends \
-#         apache2 \
-#         php \
-#         php-mysql \
-#         php-cli \
-#         php-json \
-#         php-gd \
-#         php-curl \
-#         php-mbstring \
-#         php-xml \
-#         php-zip \
-#         php-imagick \
-#         php-common \
-#         php-fpm \
-#         mariadb-client \
-#         git \
-#         unzip \
+# # Mettre à jour les packages et installer les dépendances
+# RUN apt-get update && apt-get install -y \
+#     nginx \
+#     php8.1-fpm \
+#     php8.1-mysql \
+#     php8.1-curl \
+#     php8.1-gd \
+#     php8.1-intl \
+#     php8.1-mbstring \
+#     php8.1-soap \
+#     php8.1-xml \
+#     php8.1-xmlrpc \
+#     php8.1-zip \
+#     php8.1-cli \
+#     curl \
+#     ca-certificates \
+#     supervisor \
 #     && rm -rf /var/lib/apt/lists/*
 
-# RUN a2enmod rewrite \
-#             headers \
-#             proxy_fcgi \
-#             setenvif \
-#             dir
+# # Configuration PHP-FPM
+# RUN sed -i 's/listen = \/run\/php\/php8.1-fpm.sock/listen = 127.0.0.1:9000/' /etc/php/8.1/fpm/pool.d/www.conf
 
-# COPY default.conf /etc/apache2/sites-available/000-default.conf
-# RUN a2ensite 000-default.conf
+# # Créer les répertoires nécessaires
+# RUN mkdir -p /var/log/supervisor /var/run/php
 
-# WORKDIR /var/www/html
-# RUN rm -rf /var/www/html/* && \
-#     curl -o wordpress.zip https://wordpress.org/latest.zip && \
-#     unzip wordpress.zip && \
-#     mv wordpress/* . && \
-#     rm -r wordpress wordpress.zip
+# # Télécharger et installer WordPress
+# WORKDIR /tmp
+# RUN curl -o wordpress.tar.gz -fSL "https://wordpress.org/wordpress-${WORDPRESS_VERSION}.tar.gz" \
+#     && echo "$WORDPRESS_SHA1 *wordpress.tar.gz" | sha1sum -c - \
+#     && tar -xzf wordpress.tar.gz -C /var/www/ \
+#     && rm wordpress.tar.gz \
+#     && chown -R www-data:www-data /var/www/wordpress
 
-# RUN chown -R www-data:www-data /var/www/html && \
-#     chmod -R 755 /var/www/html
+# # Copier les configurations
+# COPY ../nginx/default.conf /etc/nginx/sites-available/default
+# COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+# COPY docker-entrypoint.sh /usr/local/bin/
+# RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
+# # Exposer le port 80
 # EXPOSE 80
 
-# COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-# RUN chmod +x /usr/local/bin/docker-entrypoint.sh
-# CMD ["docker-entrypoint.sh"]
+# # Définir le répertoire de travail
+# WORKDIR /var/www/wordpress
+
+# # Variables d'environnement pour WordPress
+# ENV WORDPRESS_DB_HOST=db:3306
+# ENV WORDPRESS_DB_NAME=wordpress
+# ENV WORDPRESS_DB_USER=wordpress
+# ENV WORDPRESS_DB_PASSWORD=wordpress
+
+# # Point d'entrée
+# ENTRYPOINT ["docker-entrypoint.sh"]
+# CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
