--- a/srcs/requirements/nginx/default.conf
+++ b/srcs/requirements/nginx/default.conf
@@ -1,97 +1,5 @@
-# server {
-#     listen localhost:443;
-#     server_name vgarcia.42.fr;
-# }
-
-
 server {
-    listen 80;
-    server_name localhost;
-    root /var/www/wordpress;
-    index index.php index.html index.htm;
+    listen localhost:443;
+    server_name vgarcia.42.fr;
 
-    # Augmenter la taille max des uploads
-    client_max_body_size 100M;
-
-    # Logs
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
-
-    # Gestion des fichiers statiques avec cache
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-        try_files $uri =404;
-    }
-
-    # Règles principales WordPress
-    location / {
-        try_files $uri $uri/ /index.php?$args;
-    }
-
-    # Traitement des fichiers PHP
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass 127.0.0.1:9000;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-        include fastcgi_params;
-        
-        # Augmenter les timeouts
-        fastcgi_read_timeout 300;
-        fastcgi_connect_timeout 300;
-        fastcgi_send_timeout 300;
-    }
-
-    # Sécurité - bloquer l'accès aux fichiers sensibles
-    location ~ /\. {
-        deny all;
-        access_log off;
-        log_not_found off;
-    }
-
-    location ~* /(wp-config\.php|readme\.html|license\.txt|wp-config-sample\.php)$ {
-        deny all;
-    }
-
-    # Bloquer l'accès au dossier wp-content/uploads pour les scripts
-    location ~* ^/wp-content/uploads/.*\.php$ {
-        deny all;
-    }
-
-    # Optimisations WordPress
-    location = /favicon.ico {
-        log_not_found off;
-        access_log off;
-        expires 1y;
-    }
-
-    location = /robots.txt {
-        allow all;
-        log_not_found off;
-        access_log off;
-    }
-
-    # Gestion des permaliens WordPress
-    location ~* ^.+\.(ogg|ogv|svg|svgz|eot|otf|woff|mp4|ttf|css|rss|atom|js|jpg|jpeg|gif|png|ico|zip|tgz|gz|rar|bz2|doc|xls|exe|ppt|tar|mid|midi|wav|bmp|rtf)$ {
-        access_log off;
-        log_not_found off;
-        expires 1y;
-        add_header Cache-Control "public";
-    }
-
-    # Compression gzip
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_types
-        text/plain
-        text/css
-        text/xml
-        text/javascript
-        application/x-javascript
-        application/xml+rss
-        application/javascript;
 }
