debut worpress + start nginx

--- a/srcs/.env
+++ b/srcs/.env
@@ -4,3 +4,7 @@ MARIADB_ADMIN=vgarcia
 MARIADB_ADMIN_PASSWD=not123
 MARIADB_PASSWD=friend1234
 DATABASE_NAME=wordpress_database
+MARIADB_PATH=/var/lib/mysql
+WP_PATH=/var/www/html
+DBHOST=MARIADB
+TITLE=Inception
