--- a/srcs/requirements/nginx/default.conf
+++ b/srcs/requirements/nginx/default.conf
@@ -1,5 +1,9 @@
 server {
-    listen localhost:443;
+    listen 8080;
+    host [::];
     server_name vgarcia.42.fr;
 
+    location /php {
+        
+    }
 }
