--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,16 +1,12 @@
 FROM debian:11
 
-RUN apt update && apt upgrade -y && apt install -y php-fpm php curl unzip
+RUN apt update && apt upgrade -y && apt install -y php-fpm php curl unzip php7.4-mysqli
+
+RUN mkdir -p /run/php && chown www-data:www-data /run/php
 
 COPY . .
+COPY conf /etc/php/7.4/fpm/pool.d/www.conf
 
 RUN chmod +x ./script.sh
-RUN rm -rf /var/www/html
-RUN mkdir -p /var/www/html
-
-RUN curl -LO https://wordpress.org/latest.zip && unzip latest.zip
-
-RUN mv latest.zip /var/www/html
-
 
 ENTRYPOINT ["./script.sh"]
