--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,7 +13,10 @@ services:
     restart: unless-stopped
 
     ports:
-      - "443:443"
+      - "8080:80"
+
+    volumes:
+      - wp_data:/var/www/html
 
   mariadb:
       build: ./requirements/mariadb/
@@ -41,6 +44,9 @@ services:
 
       container_name: WORDPRESS
 
+      networks:
+        - inception
+
       depends_on:
         - mariadb
 
@@ -50,10 +56,7 @@ services:
       restart: unless-stopped
 
       volumes:
-        - ./requirements/wordpress/:/var/www/html
-
-      networks:
-        - inception
+        - wp_data:/var/www/html
 
 networks:
   inception:
@@ -62,4 +65,13 @@ networks:
 volumes:
   mariadb_data:
     driver: local
-
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/vgarcia/data
+  wp_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /home/vgarcia/data
