nginx tls fonctionnel plus qu a link wordpress et nginx

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,9 +1,17 @@
 FROM debian:11
 
-RUN apt update && apt upgrade -y && apt install -y nginx
+RUN apt update && apt upgrade -y && apt install -y nginx openssl
 
-COPY . /etc/nginx/
+COPY default.conf etc/nginx/conf.d
 
-EXPOSE 8080
+RUN openssl genrsa -out vgarcia.key 2048
+RUN openssl req -x509 -new -key vgarcia.key -out vgarcia.crt \
+    -subj "/C=Fr/ST=Rhone/L=Lyon/O=Inception, Inc./OU=IT/CN=vgarcia.42.fr"
+
+RUN chmod 644 vgarcia.key vgarcia.crt
+RUN mv vgarcia.key /etc/nginx/vgarcia.key
+RUN mv vgarcia.crt /etc/nginx/vgarcia.crt
+
+EXPOSE 443
 
 CMD ["nginx", "-g", "daemon off;"]
