--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,7 +13,10 @@ services:
     restart: unless-stopped
 
     ports:
-      - "8080:80"
+      - "443:443"
+
+    depends_on:
+      - wordpress
 
     volumes:
       - wp_data:/var/www/html
@@ -55,6 +58,8 @@ services:
 
       restart: unless-stopped
 
+      ports:
+        - "9000:9000"
       volumes:
         - wp_data:/var/www/html
 
