--- a/srcs/requirements/nginx/default.conf
+++ b/srcs/requirements/nginx/default.conf
@@ -1,9 +1,19 @@
 server {
-    listen 8080;
-    host [::];
+    listen 443 ssl;
+    listen [::]:443 ssl;
     server_name vgarcia.42.fr;
 
-    location /php {
-        
+    ssl_certificate_key /etc/nginx/vgarcia.key;
+    ssl_certificate /etc/nginx/vgarcia.crt;
+    ssl_protocols TLSv1.2 TLSv1.3;
+
+    root /var/www/html;
+    location / {
+        try_files $uri $uri/ /index.php?$args;
+    }
+
+    location ~ \.php$ {
+        fastcgi_pass wordpress:9000;
+        fastcgi_index index.php;
     }
 }
