--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -73,10 +73,10 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /home/vgarcia/data
+      device: /home/vgarcia/data/mariadb
   wp_data:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: /home/vgarcia/data
+      device: /home/vgarcia/data/wordpress
