--- a/srcs/requirements/nginx/default.conf
+++ b/srcs/requirements/nginx/default.conf
@@ -8,6 +8,7 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
 
     root /var/www/html;
+    index index.php;
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
