--- a/srcs/.env
+++ b/srcs/.env
@@ -8,4 +8,5 @@ MARIADB_PATH=/var/lib/mysql
 WP_PATH=/var/www/html
 DBHOST=MARIADB
 TITLE=Inception
-WP_MAIL=user@vgarcia.com
+WP_MAIL_ADMIN=user@vgarcia.com
+WP_MAIL=user@friend.com
