add specification wp name

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -45,6 +45,8 @@ services:
   wordpress:
       build: ./requirements/wordpress/
 
+      image: wordpress
+      
       container_name: WORDPRESS
 
       networks:
